--- a/EasyGo_framework/build.gradle
+++ b/EasyGo_framework/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v13:24.2.0'
 }
