--- a/EasyGo_framework/build.gradle
+++ b/EasyGo_framework/build.gradle
@@ -33,4 +33,9 @@ dependencies {
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:support-v13:24.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
