--- a/EasyGo_framework/build.gradle
+++ b/EasyGo_framework/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'net.jokubasdargis.rxbus:rxbus:1.2.0'
 }
