--- a/EasyGo_Main/build.gradle
+++ b/EasyGo_Main/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
     defaultConfig {
         applicationId "com.example.lyh.quickdevelopframe"
         minSdkVersion 15
